--- a/WWS Trimmer.csproj
+++ b/WWS Trimmer.csproj
@@ -7,7 +7,24 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>ikonatrimmer1.ico</ApplicationIcon>
+    <Title>Quick PDF</Title>
+    <Copyright>Open Source with rights reserved</Copyright>
+    <PackageIcon>ikonatrimmer1.png</PackageIcon>
+    <AssemblyVersion>2.0.9</AssemblyVersion>
+    <FileVersion>2.0.9</FileVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="ikonatrimmer1.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\Downloads\ikonatrimmer1.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="BouncyCastle.Cryptography" Version="2.2.1" />
