--- a/WWS Trimmer.csproj
+++ b/WWS Trimmer.csproj
@@ -13,6 +13,12 @@
     <PackageIcon>ikonatrimmer1.png</PackageIcon>
     <AssemblyVersion>2.0.9</AssemblyVersion>
     <FileVersion>2.0.9</FileVersion>
+    <SignAssembly>False</SignAssembly>
+    <PackageId>Quick PDF</PackageId>
+    <Version>2.0.9</Version>
+    <Authors>WWS Insurance</Authors>
+    <Company>WWS Insurance</Company>
+    <Product>Quick PDF</Product>
   </PropertyGroup>
 
   <ItemGroup>
